# mcp-jira-python

./: .coverage  README.md  pyproject.toml
_tests/: test_jira_mcp_system.py
src/jira_api/: __init__.py  server.py
src/mcp_jira_python/: server.py
tests/: README.md  test_jira_api.py  test_jira_integration.py  test_jira_mcp_system.py
