[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-jira-python"
version = "0.1.0"
description = "JIRA MCP Server Implementation in Python"
requires-python = ">=3.8"
dependencies = [
    "jira",
    "mcp-server",
    "pydantic"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
